Fixed menu scroll on mobile

--- a/style.css
+++ b/style.css
@@ -65,6 +65,11 @@ header > a, img.Logo {
     z-index: 3;
 }
 
+/* for mobile menu */
+.Hamburger.fixed {
+	position: fixed;
+}
+
 .Hamburger div {
     width: 100%;
     height: 100%;
@@ -105,11 +110,13 @@ header > a, img.Logo {
 
 @media only screen and (max-width: 900px) {
     .Menu {
-        width: 100%;
-        height: 100%;
-        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
         top: 0;
 
+        background-color: #437F8C;
+		
         flex-direction: column;
         align-items: center;
         justify-content: center;
